<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_margin="7dp">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_velovify"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_marginTop="35dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/see_favorite"
        android:backgroundTint="@color/red_600"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cornerRadius="6dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_the_list"
        android:backgroundTint="@color/red_500"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cornerRadius="6dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_the_map"
        android:backgroundTint="@color/red_400"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cornerRadius="6dp"/>


</LinearLayout>