<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/stationImage"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:src="@color/red_500" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp" >

        <TextView
            android:id="@+id/stationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/station_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/stationBikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/velovs_park"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/stationPlaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/place_available"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>